--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Morii">
+        android:theme="@style/Theme.Morii"
+        >
         <activity
             android:name="com.hustunique.morii.edit.EditActivity"
             android:exported="true" >
