--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,17 @@ android {
         applicationId "com.hustunique.morii"
         minSdk 24
         targetSdk 31
-        versionCode 4
-        versionName "0.1.0-alpha"
+        versionCode 5
+        versionName "0.1.1-alpha"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk{
+            abiFilters 'arm64-v8a'
+        }
         externalNativeBuild {
             cmake {
-                cppFlags ''
+                cppFlags '-Wall -Wextra '
             }
+            ndkVersion '23.1.7779620'
         }
 
     }
@@ -39,7 +43,7 @@ android {
     externalNativeBuild {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
-            version '3.18.1'
+            version '3.22.0-rc2'
         }
     }
 }
