--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.hustunique.morii"
         minSdk 24
         targetSdk 31
-        versionCode 5
-        versionName "0.1.1-alpha"
+        versionCode 6
+        versionName "0.1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk{
             abiFilters 'arm64-v8a'
